src/main/webapp/css/admin/imcms-super-admin.css
@import url("../imcms-info-page.css");

.imcms-info-page {
    position: absolute;
    margin: 0;
    left: 15%;
    width: 70%;
    top: 2%;
}

@media screen and (max-width: 1600px) {
    .imcms-info-page {
        left: 12%;
        width: 76%;
    }
}

@media screen and (max-width: 1400px) {
    .imcms-info-page {
        left: 7%;
        width: 86%;
    }
}

@media screen and (max-width: 1200px) {
    .imcms-info-page {
        left: 1%;
        width: 98%;
    }
}

.imcms-pop-up-modal {
    height: 905px;
}

.imcms-search-row > * {
    width: 25%;
    display: inline-block;
    padding: 0 10px 0;
}

.imcms-search-row > :first-child {
    padding-left: 0;
}

.imcms-pop-up-modal__right-side {
    width: 80%;
    padding: 30px 60px;
    height: 95%;
}

.imcms-search-row__users-list-button .imcms-button {
    float: none;
}

.imcms-form__field .imcms-user-title-row.imcms-title {
    margin-bottom: 0;
}

.imcms-user-info-row,
.imcms-user-title-row {
    padding: 2px;
    border-bottom: solid 1px #dad5d5;
}

.imcms-user-info-row__user-id,
.imcms-user-info-row__last-name,
.imcms-user-info-row__first-name,
.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-id,
.imcms-user-title-row__last-name,
.imcms-user-title-row__first-name,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    padding: 5px;
}

.imcms-user-info-row .imcms-control {
    margin: 5px;
}

.imcms-user-info-row__user-id,
.imcms-user-title-row__user-id {
    width: 5%;
}

.imcms-user-info-row__first-name,
.imcms-user-title-row__first-name {
    width: 13%;
}

.imcms-user-info-row__last-name,
.imcms-user-title-row__last-name {
    width: 18%;
}

.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    width: 27%;
}

.imcms-user-info-row > *,
.imcms-user-title-row > * {
    display: inline-block;
}

.imcms-user-info-row__archive {
    background-size: contain;
    width: 21px;
    height: 21px;
    font-size: 14px;
}

.imcms-users-search-result {
    height: 600px;
    overflow-y: auto;
    background-color: #ececec;
    border: solid 1px #d1d2c6;
}

.imcms-pop-up-modal__left-side {
    max-width: none;
    width: 20%;
}

.imcms-user-info-row--archived {
    background-color: lightgray;
}

.imcms-drop-down-list__item .imcms-label {
    margin-bottom: 0;
}

.roles-table {
    width: 40%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-block;
}

.roles-table__role-row {
    padding: 5px;
    cursor: pointer;
}

.roles-table__role-row:hover {
    background-color: #dfedff;
}

.roles-table__role-row.roles-table__role-row--active {
    background-color: #c3d9f5;
}

.roles-editor {
    width: 40%;
    margin-left: 2%;
    vertical-align: top;
}

.files-table {
    width: 95%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-flex;
    justify-content: space-between;
}

.first-sub-files {
    background-color: #b94a48;
    border: 1px solid gainsboro;
    justify-content: space-between;
}

.second-sub-files {
    background-color: aqua;
    border: 1px solid gainsboro;
    justify-content: space-between;
}

.file-row,
.directory-row,
.file-second-row {
    padding: 5px;
    cursor: pointer;
    display: flex;
}

.files-table__directory-row--active,
.files-table__file-row--active {
    background-color: #c3d9f5;
}

.file-row:hover,
.directory-row:hover,
.file-second-row:hover {
    background-color: #dfedff;
}

.file-row__file-name,
.directory-row__file-name,
.file-second-row__file-name {
    width: 60%;
    word-break: break-all;
}

.file-row__download,
.file-row__edit,
.file-row__delete,
.file-second-row__download,
.file-second-row__edit,
.file-second-row__delete {
    width: 10%;
}

.files-table__first-instance,
.files-table__second-instance {
    width: 50%;
}

.file-row.files-table__file-row--active {
    background-color: #c3d9f5;
}

.buttons-action {
    display: inline-flex;
    width: 100%;
}

.buttons-move,
.buttons-copy {
    display: inline-flex;
    float: right;
    padding-right: 48%;
}

.buttons-action__first-action {
    width: 50%;
    padding-left: 30%;
}

.buttons-action__second-action {
    width: 50%;
    padding-right: 25%;
}

.second-files-action,
.first-files-action {
    display: flex;
}

.title-profile-row.table-title {
    display: flex;
    font-weight: 600;
    margin-bottom: 10px;
    padding: 5px;
}

.title-profile-row__name {
    width: 45%;
}

.title-profile-row__doc-name {
    width: 45%;
}

.profiles-table {
    width: 40%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-block;
}

.table-links {
    width: 100%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
}


.link-title-row.link-title {
    display: flex;
    font-weight: 600;
    margin-bottom: 5px;
    padding: 5px;
    text-align: center;
}

.link-info-row {
    display: flex;
    margin-bottom: 5px;
    padding: 5px;
    text-align: center;
}

.link-params-block.imcms-form__field {
    display: inline-flex;
}

.imcms-number.link-params-block__links-field-end,
.imcms-number.link-params-block__links-field-start {
    padding-right: 10px;
}

.link-params-block__loading-animation {
    border: 6px solid #d4d4d4;
    border-top: 6px solid #0b94d8;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 1.5s linear infinite;
    margin-top: 30px;
    margin-left: 50px;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.link-title-row__page-alias,
.link-info-row__link-page-alias {
    width: 10%;
}
.link-title-row__status,
.link-title-row__admin {
    width: 10%;
}

.link-title-row__status,
.link-info-row__link-status {
    width: 10%;
}

.link-title-row__type,
.link-info-row__link-type {
    width: 10%;
}

.link-title-row__admin,
.link-info-row__link-admin {
    width: 10%;
}

.link-title-row__link,
.link-info-row__link-name {
    width: 30%;
}

.link-params-block__button-validation {
    margin-bottom: 15px;
    margin-top: 35px;
}

.imcms-checkbox {
    margin-top: 10px;
}

.link-title-row__host-found,
.imcms-control.imcms-control--remove.link-info-row__link-host-found,
.imcms-control.imcms-control--check.link-info-row__link-host-found {
    width: 10%;
}

.link-title-row__host-reachable,
.imcms-control.imcms-control--remove.link-info-row__link-host-reachable,
.imcms-control.imcms-control--check.link-info-row__link-host-reachable {
    width: 10%;
}

.link-title-row__page-found,
.imcms-control.imcms-control--remove.link-info-row__link-page-found,
.imcms-control.imcms-control--check.link-info-row__link-page-found {
    width: 10%;
}

.imcms-control.imcms-control--check.link-info-row__link-host-found,
.imcms-control.imcms-control--check.link-info-row__link-host-reachable,
.imcms-control.imcms-control--check.link-info-row__link-page-found {
    background-image: url("/images_new/controls/icon_folder_controll_check_hover.svg");
}

.imcms-control.imcms-control--remove.link-info-row__link-host-reachable,
.imcms-control.imcms-control--remove.link-info-row__link-page-found,
.imcms-control.imcms-control--remove.link-info-row__link-host-found {
    background-image: url("/images_new/controls/icon_folder_controll_remove_hover.png");
}

.category-type-editor,
.category-editor {
    width: 50%;
}

.categories,
.category-type {
    display: flex;
    width: 100%;
}

.category-type__type-drop-list {
    width: 65%;
}

.categories__select-categories {
    width: 65%;
}

.categories__category-create-button {
    margin-top: 32px;
    margin-left: 15px;
}

.category-type__type-create-button {
    margin-top: 32px;
    margin-left: 15px;
}

.category-create-block__row-description {
    width: 65%;
}

.type-create-block__field-name {
    width: 65%;
}

.category-create-block__row-name {
    width: 65%;
}

.category-selection-block {
    flex-basis: 50%;
}

.types-editor-block {
    flex-basis: 50%;
}

.category-admin {
    display: flex;
    justify-content: space-between;
}

.categories-block__select-categories {
    width: 55%;
}

.profile-info-row {
    padding: 5px;
    cursor: pointer;
    display: flex;
}

.profile-info-row:hover {
    background-color: #dfedff;
}

.profile-info-row.profiles-table__profile-row--active {
    background-color: #c3d9f5;
}

.profile-info-row__profile-name {
    width: 45%;
}

.profile-info-row__profile-doc-name {
    width: 45%;
}

.imcms-control.imcms-control--remove.profile-info-row__delete {
    width: 10%;
}

.profiles-editor {
    width: 25%;
    margin-left: 10%;
    vertical-align: top;
}

.imcms-buttons.profiles-editor__profile-button-edit {
    padding: 10px;
}

.imcms-settings-row {
    margin-top: 25px;
}

.imcms-content-action-row {
    margin-top: 25px;
}

.imcms-content-action-row > .imcms-title {
    margin-bottom: 5px;
}

.auth-provider-icon {
    width: 30px;
    padding-left: 10px;
    vertical-align: middle;
}

.external-role {
    padding-bottom: 0;
}

.external-role__name {
    display: inline-block;
    padding: 5px;
    width: 250px;
}

.external-role__linked-local-roles {
    display: inline-block;
    width: 230px;
}

.external-role__linked-local-roles .imcms-select {
    width: 230px;
}

.external-role__controls {
    display: inline-block;
}

.external-role__controls .imcms-button {
    display: inline-block;
    margin-left: 5px;
    padding-bottom: 12px;
    padding-top: 12px;
}

.delete-document-row__input,
.delete-document-row__confirm {
    display: inline-block;
}

.delete-document-row__confirm {
    margin-left: 15px;
}

.delete-document-row .imcms-number__error-msg {
    position: absolute;
}

.roles-editor__role-permissions {
    padding-left: 40px;
}

.rules-table {
    height: 400px;
    overflow-y: auto;
    background-color: #ececec;
    border: solid 1px #d1d2c6;
}

.rule-title-row__rule-enabled,
.rule-title-row__rule-restricted,
.rule-title-row__rule-ip-range,
.rule-title-row__rule-role,
.rule-title-row__rule-user {
    text-align: center;
}

.rule-row__rule-enabled,
.rule-row__rule-restricted,
.rule-row__rule-ip-range,
.rule-row__rule-role,
.rule-row__rule-user {
    padding-top: 5px;
    padding-bottom: 5px;
    text-align: center;
}

.rule-row__rule-delete .imcms-control .imcms-control--remove {
    margin: 5px;
    width: 5%;
}

.rule-row__rule-delete {
    margin-left: 15px;
}

.rule-row__rule-enabled,
.rule-row__rule-restricted,
.rule-title-row__rule-enabled,
.rule-title-row__rule-restricted {
    width: 11%;
}

.rule-row__rule-enabled > .imcms-checkbox__label,
.rule-row__rule-restricted > .imcms-checkbox__label {
    width: 0;
}

.rule-row__rule-ip-range,
.rule-title-row__rule-ip-range {
    width: 47%;
}

.rule-row__rule-role,
.rule-row__rule-user,
.rule-title-row__rule-role,
.rule-title-row__rule-user {
    width: 12%;
}

.rule-row > *,
.rule-title-row > * {
    display: inline-block;
}

.rules-editor {
    width: 100%;
    padding-bottom: 10px;
}

.rules-editor .imcms-select {
    width: 45%;
}

.rules-editor__rule-range-row > div {
    float: left;
    margin-right: 5px;

}

.ip-range__ip-range-divider {
    margin-top: 35px;
}

.rules-editor > div {
    padding: 10px;
}

.rules-editor__rule-range-row > .imcms-text-box {
    width: 45%;
}

.rules-editor .imcms-error-msg {
    width: 47%;
    float: left;
}

.rules-editor__rule-range-error-row:after {
    content: "";
    clear: both;
    display: table;
}

